@@ -526,7 +526,12 @@ This is used when the ``local-tar`` ``basebackup_mode`` is used.  The data
 directory must point to PostgreSQL's ``$PGDATA`` and must be readable by the
 ``pghoard`` daemon.
 
+If ``pg_data_directory`` is set the ``pg_xlog_directory`` option is not
+needed.
+
 ``pg_xlog_directory`` (default ``"/var/lib/pgsql/data/pg_xlog"``)
+
+Deprecated.  Set ``pg_data_directory`` instead.
 
 This is used when ``pghoard_postgres_command`` is used as PostgreSQL's
 ``archive_command`` or ``restore_command``.  It should be set to the
